--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,12 @@
 }
 .navbar .quote h1{
     text-align: center;
-    font-size: 15px;
+    font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
     color: #ff4d47;
 }
-
+body{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 2%;
+}
+/* home page - nav bar  (APP) */
