--- a/src/Components/Books/css/Book.css
+++ b/src/Components/Books/css/Book.css
@@ -1,12 +1,15 @@
 .Book-Container{
     background-color:  #F2E8C6;
     height: 100px;
-    display: flex;
 }
 .Book-Container h1{
     color: #BB0029;
     text-align: center;
+    padding-top: 30px;
 }
 .image-container{
- width: 50%;
+    padding-top: 100px;
+    padding-bottom: 100px;
+  text-align: center;
+  background-color: #FFA754;
 }
