--- a/src/Components/Pyqs/pyqs.css
+++ b/src/Components/Pyqs/pyqs.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly; 
+    align-items: center;
+    text-align: center;
 }
 .Pyq-container div{
     width: 400px;
@@ -15,10 +17,5 @@
     background-color: #BB0029;
     color: whitesmoke;
     font-size: 22px;
-
-}
-.pyq-title{
-    text-align: center;
-    color: #3A1F5D;
-    padding: 40px;
+   
 }
